Add reload option to services
